<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/mobile_navigation"
	app:startDestination="@+id/navigation_bluetooth">

	<fragment
		android:id="@+id/navigation_bluetooth"
		android:name="com.sepano.app.ui.bluetooth.BluetoothFragment"
		android:label="@string/title_bluetooth"
		tools:layout="@layout/fragment_bluetooth" />

	<fragment
		android:id="@+id/navigation_calculator"
		android:name="com.sepano.app.ui.calculator.CalculatorFragment"
		android:label="@string/title_calculator"
		tools:layout="@layout/fragment_calculator" />

	<fragment
		android:id="@+id/navigation_phone"
		android:name="com.sepano.app.ui.memory.PhoneFragment"
		android:label="@string/title_phone"
		tools:layout="@layout/fragment_phone" />
</navigation>
